Mubbi: Continued on the products section. All pictures are now the same size. Also added padding on the right so picture wasn't stuck on edge of the screen. Trying to mess with the card color now.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                       class="header__img"
                       id="strawberry"
                       data-version-number = "3.0"
+                      style="width:300px;height:300px;"
               />
             </div>
           </div>
@@ -91,17 +92,19 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div>
+            <div >
               <img
-                      src="images/Skærmbillede 2022-11-23 kl. 15.56.10.png"
-                      alt="cherry"
+                      src="images/Skærmbillede 2022-11-24 kl. 10.28.53.png"
+                      alt="grape"
                       class="header__img"
-                      id="cherry"
+                      id="grape"
                       data-version-number = "3.0"
+                      style="width:300px;height:300px;"
               />
             </div>
           </div>
         </div>
+        <div >
         <div class="face face2">
           <div class="content">
             <h3>
@@ -109,14 +112,22 @@
             </h3>
             <p>This is where I read news and network with different social groups.</p>
           </div>
+          </div>
         </div>
       </div>
 
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div class="icon">
-              <i class="fa fa-github-square" aria-hidden="true"></i>
+            <div>
+              <img
+                      src="images/Skærmbillede 2022-11-23 kl. 15.56.10.png"
+                      alt="cherry"
+                      class="header__img"
+                      id="cherry"
+                      data-version-number = "3.0"
+                      style="width:300px;height:300px;"
+              />
             </div>
           </div>
         </div>
@@ -133,8 +144,40 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div class="icon">
-              <i class="fa fa-github-square" aria-hidden="true"></i>
+            <div>
+              <img
+                      src="images/Skærmbillede 2022-11-24 kl. 10.28.33.png"
+                      alt="asparagus"
+                      class="header__img"
+                      id="asparagus"
+                      data-version-number = "3.0"
+                      style="width:300px;height:300px;"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <h3>
+              <a href="https://github.com/atom888" target="_blank">atom888</a>
+            </h3>
+            <p>This is where I share code and work on projects.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <div >
+              <img
+                      src="images/Skærmbillede 2022-11-24 kl. 10.33.44.png"
+                      alt="rasberry"
+                      class="header__img"
+                      id="rasberry"
+                      data-version-number = "3.0"
+                      style="width:300px;height:300px;"
+              />
             </div>
           </div>
         </div>
