Mubbi: Added the about kombucha section. Also played around with the colors for each section

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     />
     <ul class="nav__links">
       <li class="nav__item">
-        <a class="nav__link" href="#">Products</a>
+        <a class="nav__link" href="#section--1">Products</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--1">Locations</a>
+        <a class="nav__link" href="#section--2">Locations</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--2">About</a>
+        <a class="nav__link" href="#section--3">About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--3">Blog</a>
+        <a class="nav__link" href="#section--4">Blog</a>
       </li>
       <li class="nav__item">
         <button class="btn btn-default"
@@ -43,8 +43,6 @@
         <button class="btn btn-default"
         > <i class="fa-solid fa-user"></i>
         </button>
-
-
       </li>
     </ul>
   </nav>
@@ -53,13 +51,13 @@
 
     <img
             src="images/Logo2.bmp"
-            class="header__img"
-            alt="Minimalist bank items"
+            class="Kalle Logo"
+            alt="Kalle Logo"
     />
   </div>
 </header>
 
-<section class="section" id="section--1">
+<section class="sectionProducts" id="section--1">
   <div class="section__title">
     <h2 class="section__description">Products</h2>
 
@@ -71,7 +69,7 @@
               <img
                       src="images/CA-Strawberries-Mocktail-10.jpg"
                       alt="strawberry"
-                      class="header__img"
+                      class="card__img"
                       id="strawberry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
@@ -96,7 +94,7 @@
               <img
                       src="images/Skærmbillede 2022-11-24 kl. 10.28.53.png"
                       alt="grape"
-                      class="header__img"
+                      class="card__img"
                       id="grape"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
@@ -104,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div >
+        <div>
         <div class="face face2">
           <div class="content">
             <h3>
@@ -123,7 +121,7 @@
               <img
                       src="images/Skærmbillede 2022-11-23 kl. 15.56.10.png"
                       alt="cherry"
-                      class="header__img"
+                      class="card__img"
                       id="cherry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
@@ -148,7 +146,7 @@
               <img
                       src="images/Skærmbillede 2022-11-24 kl. 10.28.33.png"
                       alt="asparagus"
-                      class="header__img"
+                      class="card__img"
                       id="asparagus"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
@@ -173,7 +171,7 @@
               <img
                       src="images/Skærmbillede 2022-11-24 kl. 10.33.44.png"
                       alt="rasberry"
-                      class="header__img"
+                      class="card__img"
                       id="rasberry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
@@ -197,19 +195,20 @@
 </section>
 
 
-<section class="section" id="section--2">
+<section class="sectionAbout" id="section--3">
   <div class="section__title">
-    <h2 class="section__description">Attributter</h2>
+    <h2 class="section__description">What is kombucha</h2>
     <h3 class="section__header">
-      Everything you need to know about attributter.
+      Are you also confused about this new magical drink everyone talks about?
+      Click here to read more about what Kombucha is, and about Kalles vision for
+      the future of kombucha.
     </h3>
-    <label for="inpAttribut">Enter an attribute</label>
-    <input id="inpAttribut" type="text" />
-    <button class="btn pbGetAttribut">Show attribute</button>
+   <button class="btnK"> Tell me of this magical stuff
+   </button>
   </div>
 </section>
 
-<section class="section" id="section--3">
+<section class="sectionScrolling" id="section--2">
   <div class="section__title">
     <h2 class="section__description">Scrolling</h2>
     <h3 class="section__header">
@@ -259,7 +258,7 @@
 <div class="overlay hidden"></div>
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
+
 
 
 </body>
