Product page fetch works, organized packages and names.

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -9,16 +9,17 @@
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/productsPageStyle.css"/>
+
     <title>Kalles Kombucha</title>
 
-    <script src="../JS/productsFetch.js" defer></script>
+    <script src="../JS/productsFetch.js" type="module" defer></script>
 </head>
 
 <header class="header">
     <nav class="nav">
         <img
-                src="../img/Logo_small.bmp"
+                src="../img/logos/Logo_small.bmp"
                 alt="Bankist logo"
                 class="nav__logo"
                 id="logo"
@@ -56,17 +57,11 @@
 
 <div class="whitebox">
 
-    <div class="header">
-        <h1>Products</h1>
-    </div>
-    <div class="products" id="products">
-        <div id="addProductButton" class="product">
-            <img src="../img/icons/add-icon.png" alt="">
-            <p>Add product</p>
+    <div class="products_box" id="products">
+
         </div>
     </div>
 
-</div>
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js"
