--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <nav class="nav">
         <img
-                src="img/Logo_small.bmp"
+                src="img/logos/Logo_small.bmp"
                 alt="Bankist logo"
                 class="nav__logo"
                 id="logo"
@@ -52,7 +52,7 @@
     <div>
 
         <img
-                src="img/Logo2.bmp"
+                src="img/logos/Logo_big.bmp"
                 class="header__img"
                 alt="Minimalist bank items"
         />
@@ -67,15 +67,15 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <div>
+                        <div><a href="HTML/products.html">
                             <img
-                                    src="img/CA-Strawberries-Mocktail-10.jpg"
+                                    src="img/products/Strawberry.png"
                                     alt="strawberry"
                                     class="header__img"
                                     id="strawberry"
                                     data-version-number="3.0"
                                     style="width:300px;height:300px;"
-                            />
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="content">
                         <div>
                             <img
-                                    src="img/Grapes.jpg"
+                                    src="img/products/Grapes.png"
                                     alt="grape"
                                     class="header__img"
                                     id="grape"
@@ -121,7 +121,7 @@
                     <div class="content">
                         <div>
                             <img
-                                    src="img/Cherry.png"
+                                    src="img/products/Cherry.png"
                                     alt="cherry"
                                     class="header__img"
                                     id="cherry"
@@ -146,7 +146,7 @@
                     <div class="content">
                         <div>
                             <img
-                                    src="img/Asparagus.png"
+                                    src="img/products/Asparagus.png"
                                     alt="asparagus"
                                     class="header__img"
                                     id="asparagus"
@@ -171,7 +171,8 @@
                     <div class="content">
                         <div>
                             <img
-                                    src="img/Raspberry.png"
+                                    src="img/products/Raspberry.png"
+
                                     alt="rasberry"
                                     class="header__img"
                                     id="rasberry"
