Mubbi: Added stuff to the footer

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h3>
-              <a href="https://www.linkedin.com/in/adamdipinto/" target="_blank">_adamdipinto</a>
-            </h3>
-            <p>This is where I network and build my professional protfolio.</p>
+            <h3>.................
+              ...................
+              .
+              Berry Fairy</h3>
           </div>
         </div>
       </div>
@@ -105,10 +105,10 @@
         <div>
         <div class="face face2">
           <div class="content">
-            <h3>
-              <a href="https://twitter.com/AdamDipinto" target="_blank">@AdamDipinto</a>
-            </h3>
-            <p>This is where I read news and network with different social groups.</p>
+            <h3>.................
+              ...................
+              .
+              Professor Grape</h3>
           </div>
           </div>
         </div>
@@ -131,10 +131,10 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h3>
-              <a href="https://github.com/atom888" target="_blank">atom888</a>
-            </h3>
-            <p>This is where I share code and work on projects.</p>
+            <h3>.................
+              ...................
+              .
+              Cherry Poppins </h3>
           </div>
         </div>
       </div>
@@ -156,10 +156,10 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h3>
-              <a href="https://github.com/atom888" target="_blank">atom888</a>
-            </h3>
-            <p>This is where I share code and work on projects.</p>
+            <h3>.................
+              ...................
+              .
+              Asparagus Rex</h3>
           </div>
         </div>
       </div>
@@ -181,10 +181,11 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h3>
-              <a href="https://github.com/atom888" target="_blank">atom888</a>
-            </h3>
-            <p>This is where I share code and work on projects.</p>
+
+            <h3>.................
+              ...................
+              .
+              Rassy Dassy</h3>
           </div>
         </div>
       </div>
@@ -208,21 +209,25 @@
   </div>
 </section>
 
-<section class="sectionScrolling" id="section--2">
+<section class="sectionLocations" id="section--2">
   <div class="section__title">
-    <h2 class="section__description">Scrolling</h2>
+    <h2 class="section__description">Locations</h2>
     <h3 class="section__header">
-      Everything you need to know about scrolling.
+      Want to pop down to your local kiosk for a Kalle Kombucha?
     </h3>
-    <label for="inpScrolling">Enter left og top</label>
-    <input id="inpScrolling" type="text" />
-    <button class="pbGetScroll">Scroll</button>
+
+    <button class="btnL">Locations around the globe</button>
   </div>
 </section>
+
+
 
 <footer>
 <section class="footer" id="section--4">
   <div class="section__title">
+    <h3 class="footer__link">
+      Find us @
+    </h3>
     <a href="https://www.facebook.com/"  class="btn footer__btn"
     > <i class="fa-brands fa-facebook"></i>
     </a>
@@ -235,6 +240,8 @@
     <a href="https://www.linkedin.com/" class="btn footer__btn"
     > <i class="fa-brands fa-linkedin"></i>
     </a>
+
+    <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
   </div>
 </section>
 </footer>
