Refactored image names and Navigation with home button (logo)

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 
 <header class="header">
-  <nav class="nav">
+  <nav class="nav"><a href="index.html">
     <img
-            src="images/Logo_small.bmp"
+            src="img/logos/Logo_small.bmp"
             alt="Bankist logo"
             class="nav__logo"
             id="logo"
             data-version-number = "3.0"
-    />
+    /></a>
     <ul class="nav__links">
       <li class="nav__item">
         <a class="nav__link" href="#section--1">Products</a>
@@ -50,7 +50,7 @@
   <div>
 
     <img
-            src="images/Logo2.bmp"
+            src="img/logos/Logo_big.bmp"
             class="Kalle Logo"
             alt="Kalle Logo"
     />
@@ -65,15 +65,15 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div >
+            <div><a href="HTML/products.html">
               <img
-                      src="images/CA-Strawberries-Mocktail-10.jpg"
+                      src="img/products/Strawberry.png"
                       alt="strawberry"
                       class="card__img"
                       id="strawberry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
-              />
+              /></a>
             </div>
           </div>
         </div>
@@ -90,15 +90,15 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div >
+            <div><a href="HTML/products.html">
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.28.53.png"
+                      src="img/products/Grapes.png"
                       alt="grape"
                       class="card__img"
                       id="grape"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
-              />
+              /></a>
             </div>
           </div>
         </div>
@@ -117,15 +117,15 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div>
+            <div><a href="HTML/products.html">
               <img
-                      src="images/Skærmbillede 2022-11-23 kl. 15.56.10.png"
+                      src="img/products/Cherry.png"
                       alt="cherry"
                       class="card__img"
                       id="cherry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
-              />
+              /></a>
             </div>
           </div>
         </div>
@@ -142,15 +142,15 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div>
+            <div><a href="HTML/products.html">
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.28.33.png"
+                      src="img/products/Asparagus.png"
                       alt="asparagus"
                       class="card__img"
                       id="asparagus"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
-              />
+              /></a>
             </div>
           </div>
         </div>
@@ -167,15 +167,15 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div >
+            <div><a href="HTML/products.html">
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.33.44.png"
+                      src="img/products/Raspberry.png"
                       alt="rasberry"
                       class="card__img"
                       id="rasberry"
                       data-version-number = "3.0"
                       style="width:300px;height:300px;"
-              />
+              /></a>
             </div>
           </div>
         </div>
