--- a/HTML/products.html
+++ b/HTML/products.html
@@ -17,14 +17,14 @@
 </head>
 
 <header class="header">
-    <nav class="nav">
+    <nav class="nav"><a href="../index.html">
         <img
                 src="../img/logos/Logo_small.bmp"
                 alt="Bankist logo"
                 class="nav__logo"
                 id="logo"
                 data-version-number="3.0"
-        />
+        /></a>
         <ul class="nav__links">
             <li class="nav__item">
                 <a class="nav__link" href="#section--1">Products</a>
