--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <header class="header">
   <nav class="nav">
     <img
-            src="images/Logo_small.bmp"
-            alt="Bankist logo"
+            src="img/logos/Logo_small.bmp"
+            alt="Kalle small logo"
             class="nav__logo"
             id="logo"
             data-version-number = "3.0"
@@ -50,7 +50,7 @@
   <div>
 
     <img
-            src="images/Logo2.bmp"
+            src="img/logos/Logo_big.bmp"
             class="Kalle Logo"
             alt="Kalle Logo"
     />
@@ -67,7 +67,7 @@
           <div class="content">
             <div >
               <img
-                      src="images/CA-Strawberries-Mocktail-10.jpg"
+                      src="img/products/Strawberry.png"
                       alt="strawberry"
                       class="card__img"
                       id="strawberry"
@@ -92,7 +92,7 @@
           <div class="content">
             <div >
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.28.53.png"
+                      src="img/products/Grapes.png"
                       alt="grape"
                       class="card__img"
                       id="grape"
@@ -119,7 +119,7 @@
           <div class="content">
             <div>
               <img
-                      src="images/Skærmbillede 2022-11-23 kl. 15.56.10.png"
+                      src="img/products/Cherry.png"
                       alt="cherry"
                       class="card__img"
                       id="cherry"
@@ -144,7 +144,7 @@
           <div class="content">
             <div>
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.28.33.png"
+                      src="img/products/Asparagus.png"
                       alt="asparagus"
                       class="card__img"
                       id="asparagus"
@@ -169,7 +169,7 @@
           <div class="content">
             <div >
               <img
-                      src="images/Skærmbillede 2022-11-24 kl. 10.33.44.png"
+                      src="img/products/Raspberry.png"
                       alt="rasberry"
                       class="card__img"
                       id="rasberry"
