--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="css/style.css" />
+  <script src="JS/takeToTopButton.js" type="module" defer ></script>
+
   <title>Kalles Kombucha</title>
 </head>
 <body>
+
 
 <header class="header">
   <nav class="nav"><a href="index.html">
@@ -23,6 +26,7 @@
             id="logo"
             data-version-number = "3.0"
     /></a>
+
     <ul class="nav__links">
       <li class="nav__item">
         <a class="nav__link" href="#section--1">Products</a>
@@ -55,7 +59,13 @@
             alt="Kalle Logo"
     />
   </div>
+
+
 </header>
+
+
+
+
 
 <section class="sectionProducts" id="section--1">
   <div class="section__title">
@@ -218,7 +228,10 @@
 
     <button class="btnL">Locations around the globe</button>
   </div>
+
 </section>
+
+
 
 
 
