--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <ul class="nav__links">
       <li class="nav__item">
-        <a class="nav__link" href="#section--1">Products</a>
+        <a class="nav__link" href="HTML/products.html">Products</a>
       </li>
       <li class="nav__item">
         <a class="nav__link" href="#section--2">Locations</a>
@@ -38,7 +38,7 @@
         <a class="nav__link" href="#section--3">About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--4">Blog</a>
+        <a class="nav__link" href="HTML/blog.html">Blog</a>
       </li>
       <li class="nav__item">
         <button class="btn btn-default"
@@ -214,7 +214,7 @@
       Click here to read more about what Kombucha is, and about Kalles vision for
       the future of kombucha.
     </h3>
-   <button class="btnK"> Tell me of this magical stuff
+   <button  class="btnK" onclick="window.location='HTML/about.html'" type="button" > Tell me of this magical stuff
    </button>
   </div>
 </section>
@@ -226,7 +226,7 @@
       Want to pop down to your local kiosk for a Kalle Kombucha?
     </h3>
 
-    <button class="btnL">Locations around the globe</button>
+    <button class="btnL" onclick="window.location='HTML/locations.html'" type="button" >Locations around the globe</button>
   </div>
 
 </section>
