Resized images for product page and added some style.

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -27,7 +27,7 @@
         /></a>
         <ul class="nav__links">
             <li class="nav__item">
-                <a class="nav__link" href="#section--1">Products</a>
+                <a class="nav__link" href="products.html">Products</a>
             </li>
             <li class="nav__item">
                 <a class="nav__link" href="#section--2">Locations</a>
@@ -55,7 +55,7 @@
 
 <body>
 
-<div class="whitebox">
+<div class="product_container">
 
     <div class="products_box" id="products">
 
