--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <ul class="nav__links">
       <li class="nav__item">
-        <a class="nav__link" href="HTML/products.html">Products</a>
+        <a class="nav__link" href="#section--1">Products</a>
       </li>
       <li class="nav__item">
         <a class="nav__link" href="#section--2">Locations</a>
