Created the login view.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <title>Kalles Kombucha</title>
 </head>
 <body>
-
 <header class="header">
   <nav class="nav"><a href="index.html">
     <img
@@ -37,10 +36,10 @@
         <a class="nav__link" href="#section--4">Blog</a>
       </li>
       <li class="nav__item">
-        <button class="btn btn-default"
+        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
         >  <i class="fa-solid fa-cart-shopping"></i>
         </button>
-        <button class="btn btn-default"
+        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
         > <i class="fa-solid fa-user"></i>
         </button>
       </li>
@@ -220,8 +219,6 @@
   </div>
 </section>
 
-
-
 <footer>
 <section class="footer" id="section--4">
   <div class="section__title">
@@ -265,8 +262,7 @@
 <div class="overlay hidden"></div>
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
-
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 </body>
 </html>
