--- a/HTML/login.html
+++ b/HTML/login.html
@@ -8,6 +8,7 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="stylesheet" href="../css/login.css"/>
 
   <title>Kalles Kombucha</title>
 
