Refactored css files and naming - to follow the same standard. Also fixed footer for products and login.

--- a/html/login.html
+++ b/html/login.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="../css/style.css"/>
   <link rel="stylesheet" href="../css/login.css"/>
 
-  <title>Kalles Kombucha</title>
+  <title>Kalle's Kombucha</title>
 
 </head>
 <header class="header-login">
-  <nav class="nav"><a href="../index.html">
+  <nav class="nav"><a href="main-page.html">
     <img
             src="../img/logos/Logo_small.bmp"
             alt="Bankist logo"
