--- a/html/main-page.html
+++ b/html/main-page.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--<link rel="shortcut icon" type="image/png" href="img/icon.png" />-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
   <link
           href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
           rel="stylesheet"
   />
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="JS/takeToTopButton.js" type="module" defer ></script>
+  <link rel="stylesheet" href="../css/style.css" />
 
-  <title>Kalles Kombucha</title>
+  <title>Kalle's Kombucha</title>
+
 </head>
 <body>
+
 <header class="header">
-  <nav class="nav"><a href="index.html">
+  <nav class="nav"><a href="main-page.html">
     <img
-            src="img/logos/Logo_small.bmp"
+            src="../img/logos/Logo_small.bmp"
             alt="Bankist logo"
             class="nav__logo"
             id="logo"
@@ -36,13 +36,13 @@
         <a class="nav__link" href="#section--3">About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="HTML/blog.html">Blog</a>
+        <a class="nav__link" href="blog.html">Blog</a>
       </li>
       <li class="nav__item">
-        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
+        <button class="btn btn-default" onclick="window.location='login.html'" type="button"
         >  <i class="fa-solid fa-cart-shopping"></i>
         </button>
-        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
+        <button class="btn btn-default" onclick="window.location='login.html'" type="button"
         > <i class="fa-solid fa-user"></i>
         </button>
       </li>
@@ -52,7 +52,7 @@
   <div>
 
     <img
-            src="img/logos/Logo_big.bmp"
+            src="../img/logos/Logo_big.bmp"
             class="Kalle Logo"
             alt="Kalle Logo"
     />
@@ -73,9 +73,9 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="products.html">
               <img
-                      src="img/products/Strawberry.png"
+                      src="../img/products/Strawberry.png"
                       alt="strawberry"
                       class="card__img"
                       id="strawberry"
@@ -98,9 +98,9 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="products.html">
               <img
-                      src="img/products/Grapes.png"
+                      src="../img/products/Grapes.png"
                       alt="grape"
                       class="card__img"
                       id="grape"
@@ -125,9 +125,9 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="products.html">
               <img
-                      src="img/products/Cherry.png"
+                      src="../img/products/Cherry.png"
                       alt="cherry"
                       class="card__img"
                       id="cherry"
@@ -150,9 +150,9 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="products.html">
               <img
-                      src="img/products/Asparagus.png"
+                      src="../img/products/Asparagus.png"
                       alt="asparagus"
                       class="card__img"
                       id="asparagus"
@@ -175,9 +175,9 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="products.html">
               <img
-                      src="img/products/Raspberry.png"
+                      src="../img/products/Raspberry.png"
                       alt="rasberry"
                       class="card__img"
                       id="rasberry"
@@ -212,7 +212,7 @@
       Click here to read more about what Kombucha is, and about Kalles vision for
       the future of kombucha.
     </h3>
-   <button  class="btnK" onclick="window.location='HTML/about.html'" type="button" > Tell me of this magical stuff
+   <button class="btnK" onclick="window.location='about.html'" type="button" > Tell me of this magical stuff
    </button>
   </div>
 </section>
@@ -224,7 +224,7 @@
       Want to pop down to your local kiosk for a Kalle Kombucha?
     </h3>
 
-    <button class="btnL" onclick="window.location='HTML/locations.html'" type="button" >Locations around the globe</button>
+    <button class="btnL" onclick="window.location='locations.html'" type="button" >Locations around the globe</button>
   </div>
 
 </section>
@@ -251,8 +251,6 @@
   </div>
 </section>
 </footer>
-
-
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
