--- a/html/products.html
+++ b/html/products.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<link rel="shortcut icon" type="image/png" href="img/icon.png" />-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
     <link
             href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/productsPageStyle.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/products.css"/>
 
-    <title>Kalles Kombucha</title>
 
-    <script src="../JS/productsFetch.js" type="module" defer></script>
+    <title>Kalle's Kombucha</title>
+
+    <script src="../js/productsFetch.js" type="module" defer></script>
 </head>
 
-<header class="header">
-    <nav class="nav"><a href="../index.html">
+<header class="product-header">
+    <nav class="nav"><a href="main-page.html">
         <img
                 src="../img/logos/Logo_small.bmp"
                 alt="Bankist logo"
@@ -62,11 +63,10 @@
 
         </div>
     </div>
+
 </section>
 
-<!-- OVERLAYS WHEN PRODUCTS ARE LOADED FROM DATABASE -->
-<!--<footer>
-    <section class="footer" id="section&#45;&#45;4">
+    <section class="footer-product" >
         <div class="section__title">
             <h3 class="footer__link">
                 Find us @
@@ -87,8 +87,6 @@
             <p class="footer__copyright">© 2022 Kalle's Kombucha</p>
         </div>
     </section>
-</footer>-->
-
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 
