Updated links on the navbar.

--- a/html/main-page.html
+++ b/html/main-page.html
@@ -16,7 +16,8 @@
 <body>
 
 <header class="header">
-  <nav class="nav"><a href="main-page.html">
+  <nav class="nav">
+    <a onclick="window.location='main-page.html'" type="button">
     <img
             src="../img/logos/Logo_small.bmp"
             alt="Bankist logo"
