--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,8 @@
 
 </head>
 <header class="header-login">
-  <nav class="nav"><a href="main-page.html">
+  <nav class="nav">
+    <a onclick="window.location='main-page.html'" type="button">
     <img
             src="../img/logos/Logo_small.bmp"
             alt="Bankist logo"
