--- a/html/products.html
+++ b/html/products.html
@@ -18,7 +18,8 @@
 </head>
 
 <header class="product-header">
-    <nav class="nav"><a href="main-page.html">
+    <nav class="nav">
+        <a onclick="window.location='main-page.html'" type="button">
         <img
                 src="../img/logos/Logo_small.bmp"
                 alt="Bankist logo"
@@ -40,11 +41,11 @@
                 <a class="nav__link" href="#blog.html">Blog</a>
             </li>
             <li class="nav__item">
-                <button class="btn btn-default"
-                ><i class="fa-solid fa-cart-shopping"></i>
+                <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+                > <i class="fa-solid fa-cart-shopping"></i>
                 </button>
-                <button class="btn btn-default"
-                ><i class="fa-solid fa-user"></i>
+                <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+                > <i class="fa-solid fa-user"></i>
                 </button>
 
 
