Updated navlinks on the login and products pages.

--- a/html/login.html
+++ b/html/login.html
@@ -25,25 +25,24 @@
     /></a>
     <ul class="nav__links">
       <li class="nav__item">
-        <a class="nav__link" href="#section--1">Products</a>
+        <a class="nav__link" href="products.html">Products</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--2">Locations</a>
+        <a class="nav__link" href="locations.html">Locations</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--3">About</a>
+        <a class="nav__link" href="about.html">About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="#section--4">Blog</a>
+        <a class="nav__link" href="blog.html">Blog</a>
       </li>
       <li class="nav__item">
-        <button class="btn btn-default"
-        ><i class="fa-solid fa-cart-shopping"></i>
+        <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+        > <i class="fa-solid fa-cart-shopping"></i>
         </button>
-        <button class="btn btn-default"
-        ><i class="fa-solid fa-user"></i>
+        <button class="btn btn-default" onclick="window.location='login.html'" type="button"
+        > <i class="fa-solid fa-user"></i>
         </button>
-
 
       </li>
     </ul>
