--- a/html/products.html
+++ b/html/products.html
@@ -38,7 +38,7 @@
                 <a class="nav__link" href="about.html">About</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="#blog.html">Blog</a>
+                <a class="nav__link" href="blog.html">Blog</a>
             </li>
             <li class="nav__item">
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
