--- a/HTML/products.html
+++ b/HTML/products.html
@@ -36,7 +36,7 @@
                 <a class="nav__link" href="about.html">About</a>
             </li>
             <li class="nav__item">
-                <a class="nav__link" href="#blog.html">Blog</a>
+                <a class="nav__link" href="blog.html">Blog</a>
             </li>
             <li class="nav__item">
                 <button class="btn btn-default"
