--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="css/style.css" />
-  <script src="JS/takeToTopButton.js" type="module" defer ></script>
+
+  <script src="JS/frontPageProductsFetch.js" type="module" defer ></script>
 
   <title>Kalles Kombucha</title>
 </head>
@@ -65,9 +66,20 @@
 
 
 
-
-
 <section class="sectionProducts" id="section--1">
+  <div class="section__title">
+    <h2 class="section__description">Products</h2>
+      <div class="product_container">
+
+        <div class="products_box" id="products" >
+
+        </div>
+      </div>
+  </div>
+</section>
+
+
+<!--<section class="sectionProducts" id="section&#45;&#45;1">
   <div class="section__title">
     <h2 class="section__description">Products</h2>
 
@@ -203,7 +215,7 @@
     </div>
 
   </div>
-</section>
+</section>-->
 
 
 <section class="sectionAbout" id="section--3">
@@ -233,8 +245,6 @@
 
 
 
-
-
 <footer>
 <section class="footer" id="section--4">
   <div class="section__title">
@@ -260,7 +270,7 @@
 </footer>
 
 
-
+<script src="JS/frontPageProductsFetch.js" type="module" defer></script>
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 
 
