Product popup work in progress

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script
+            src="https://code.jquery.com/jquery-3.6.1.js"
+            integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+            crossorigin="anonymous">
+
+    </script>
     <!--<link rel="shortcut icon" type="image/png" href="img/icon.png" />-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
@@ -10,10 +16,12 @@
             rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/productsPageStyle.css"/>
+    <link rel="stylesheet" href="../css/productPopUpStyle.css"/>
 
     <title>Kalles Kombucha</title>
 
     <script src="../JS/productsFetch.js" type="module" defer></script>
+    <script src="../JS/productPopUpClick.js" defer></script>
 </head>
 
 <header class="header">
