Prepearing for merge

--- a/html/products.html
+++ b/html/products.html
@@ -20,8 +20,8 @@
 
     <title>Kalles Kombucha</title>
 
-    <script src="../JS/productsFetch.js" type="module" defer></script>
-    <script src="../JS/productPopUpClick.js" defer></script>
+    <script src="../js/productsFetch.js" type="module" defer></script>
+    <script src="../js/productPopUpClick.js" defer></script>
 </head>
 
 <header class="header">
