--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="css/style.css" />
-  <script src="JS/takeToTopButton.js" type="module" defer ></script>
+  <script src="js/takeToTopButton.js" type="module" defer ></script>
 
   <title>Kalles Kombucha</title>
 </head>
@@ -36,13 +36,13 @@
         <a class="nav__link" href="#section--3">About</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="HTML/blog.html">Blog</a>
+        <a class="nav__link" href="html/blog.html">Blog</a>
       </li>
       <li class="nav__item">
-        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
+        <button class="btn btn-default" onclick="window.location='html/login.html'" type="button"
         >  <i class="fa-solid fa-cart-shopping"></i>
         </button>
-        <button class="btn btn-default" onclick="window.location='HTML/login.html'" type="button"
+        <button class="btn btn-default" onclick="window.location='html/login.html'" type="button"
         > <i class="fa-solid fa-user"></i>
         </button>
       </li>
@@ -73,7 +73,7 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="html/products.html">
               <img
                       src="img/products/Strawberry.png"
                       alt="strawberry"
@@ -98,7 +98,7 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="html/products.html">
               <img
                       src="img/products/Grapes.png"
                       alt="grape"
@@ -125,7 +125,7 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="html/products.html">
               <img
                       src="img/products/Cherry.png"
                       alt="cherry"
@@ -150,7 +150,7 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="html/products.html">
               <img
                       src="img/products/Asparagus.png"
                       alt="asparagus"
@@ -175,7 +175,7 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <div><a href="HTML/products.html">
+            <div><a href="html/products.html">
               <img
                       src="img/products/Raspberry.png"
                       alt="rasberry"
@@ -212,7 +212,7 @@
       Click here to read more about what Kombucha is, and about Kalles vision for
       the future of kombucha.
     </h3>
-   <button  class="btnK" onclick="window.location='HTML/about.html'" type="button" > Tell me of this magical stuff
+   <button class="btnK" onclick="window.location='html/about.html'" type="button" > Tell me of this magical stuff
    </button>
   </div>
 </section>
@@ -224,7 +224,7 @@
       Want to pop down to your local kiosk for a Kalle Kombucha?
     </h3>
 
-    <button class="btnL" onclick="window.location='HTML/locations.html'" type="button" >Locations around the globe</button>
+    <button class="btnL" onclick="window.location='html/locations.html'" type="button" >Locations around the globe</button>
   </div>
 
 </section>
