--- a/html/productPopUp.html
+++ b/html/productPopUp.html
@@ -12,4 +12,4 @@
 
 
 </div>
-<script src="../JS/productPopUpFetch.js" type="module" defer></script>
+<script src="../js/productPopUpFetch.js" type="module" defer></script>
