Mubbi: Fixed the spacing issue between logo section and products section. Made the products in product section look nicer. Moved the buttons a bit in locations/about section

--- a/html/main-page.html
+++ b/html/main-page.html
@@ -225,7 +225,7 @@
       Click here to read more about what Kombucha is, and about Kalles vision for
       the future of kombucha.
     </h3>
-   <button class="btnK" onclick="window.location='about.html'" type="button" > Tell me of this magical stuff
+   <button class="btnK" onclick="window.location='about.html'" type="button" > Tell me about this magical stuff
    </button>
   </div>
 </section>
