Created registration form, adjusted it to login form

--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/style.css"/>
   <link rel="stylesheet" href="../css/login.css"/>
 
-  <title>Kalle's Kombucha</title>
+  <title>Kalle's Kombucha login page</title>
 
 </head>
 <header class="header-login">
@@ -53,7 +53,7 @@
 <body id="particles-js"></body>
 <div class="animated bounceInDown">
   <div class="container-login">
-    <span class="error animated tada" id="msg"></span>
+    <span class="error animated data" id="msg"></span>
     <form name="form1" class="box" onsubmit="return checkStuff()">
    <span></span>
       <h5>Sign in to your account.</h5>
@@ -67,7 +67,7 @@
       </label>
       <input type="submit" value="Sign in" class="btn1">
     </form>
-    <a href="#" class="dnthave">Don’t have an account? Sign up</a>
+    <a href="registration.html" class="dnthave">Don’t have an account? Sign up</a>
   </div>
     <section class="footer-login" >
       <div class="section__title">
