--- a/html/popUpPage.html
+++ b/html/popUpPage.html
@@ -15,13 +15,18 @@
             </div>
 
             <h2 id="productName"></h2>
-            <br>
             <p id="productPrice"></p>
             <p>33cl</p>
             <br>
-            <br>
             <p id="productDescription"></p>
 
+
+            <select name="quantity" id="quantity">
+                <option value="1 case" selected>1 case</option>
+                <option value="2 case">2 case</option>
+                <option value="3 case">3 case</option>
+                <option value="4 case">4 case</option>
+            </select>
         </div>
     </div>
 </div>
