--- a/html/popUpPage.html
+++ b/html/popUpPage.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/productPopUpStyle.css">
+
 
 <div class="products_popup_bigbox">
     <div class="product_popup_smallbox">
@@ -30,4 +30,4 @@
         </div>
     </div>
 </div>
-<script src="../js/productPopUpFetch.js" type="module" defer></script>
+<script src="../js/popups/productPopUpFetch.js" type="module" defer></script>
