--- a/html/products.html
+++ b/html/products.html
@@ -7,9 +7,6 @@
             integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
             crossorigin="anonymous"></script>
 
-
-    <script src="../js/productPopUpClick.js" type="module" defer></script>
-    <script src="../js/productPopUpFetch.js" type="module" defer></script>
     <script src="../js/productsFetch.js" type="module" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
@@ -57,23 +54,18 @@
                 <button class="btn btn-default" onclick="window.location='login.html'" type="button"
                 ><i class="fa-solid fa-user"></i>
                 </button>
-
-
             </li>
         </ul>
     </nav>
 
 </header>
 
-<body>
+<body class="productBackground">
 
+<input type="hidden" id="chosenProductId" name="chosenProductId" value="">
 <section>
 
-
-
-            <button id="openPopUp"> OpenPopUp</button>
     <div id="cont"></div>
-        </div>
 
 </section>
 
@@ -107,7 +99,6 @@
     </div>
 </section>
 </footer>-->
-
 
 <script src="https://kit.fontawesome.com/4a85efafbc.js" crossorigin="anonymous"></script>
 
